--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -12,7 +12,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="MetalGearNotSoSolidGameModeBase")
 
 [/Script/EngineSettings.GameMapsSettings]
-GlobalDefaultGameMode=/Script/MetalGearNotSoSolid.MGNSSGameMode
+GlobalDefaultGameMode=/Game/Blueprints/BP_MGNSSGameMode.BP_MGNSSGameMode_C
 EditorStartupMap=/Game/Maps/FirstPersonExampleMap.FirstPersonExampleMap
 GameDefaultMap=/Game/Maps/FirstPersonExampleMap.FirstPersonExampleMap
 
